--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "sync": "node scripts/sync-to-github.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "fs-extra": "^11.1.1",
-    "simple-git": "^3.19.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "simple-git": "^3.19.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["pnl", "trading", "dashboard", "cloud-sync"],
+  "keywords": [
+    "pnl",
+    "trading",
+    "dashboard",
+    "cloud-sync"
+  ],
   "author": "Steve",
   "license": "MIT"
 }
